# toy-payments-engine

./: Cargo.toml  LICENSE.md  README.md
src/: dto.rs  errors.rs  main.rs  repo.rs  transaction.rs
tests/: functional.rs  ui.rs
tests/data/: chargeback.csv  dispute.csv  dispute_negative.csv  precision.csv
