[package]
name = "toy-payments-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
csv = "1.1.6"
getset = "0.1.2"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.35"

[dev-dependencies]
escargot = "0.5"
assert_cmd = "2.0"
predicates = "2.1"
quickcheck = "1.0"
quickcheck_macros = "1.0.0"
paste = "1.0"
